备案资料小修改
PR #471

--- a/views/leanengine_guide.tmpl
+++ b/views/leanengine_guide.tmpl
@@ -597,7 +597,7 @@ Web Hosting的动态请求超时也被限定为15秒。
 
 ### 绑定独立域名
 
-只有主域名是需要备案的，二级子域名不需要备案。
+只有主域名需要备案，二级子域名不需要备案。独立域名要根据 Web 主机域名来解析，绑定完成后 Web 主机域名不可变更，否则会导致独立域名绑定失效。
 
 #### 主域名
 
@@ -606,12 +606,14 @@ Web Hosting的动态请求超时也被限定为15秒。
 其他用户如果需要为 App 绑定一个独立域名，可以使用账户注册邮箱将下列信息发送至 <support@leancloud.rocks> ，或者从控制台菜单中选择 **帮助** > **技术支持** ，通过工单来提出申请 ：
 
 * 您已经绑定的avosapps.com或avosapps.us二级子域名（请参考设置域名）
-* 您想要绑定的域名（必须是您名下的域名，并且您也已经将CNAME或者A记录指向了avosapps.com(国内)或avosapps.us(美国)）
+* 要绑定的域名（必须是你名下的域名）
 * 您的注册邮箱（必须与发送者的邮箱一致）
 * 您想要绑定的App Id（该应用必须位于注册邮箱的用户名下）
 * 您的域名的备案信息 （**国内必须可以在工信部查询到，美国区不需要**）
 
-我们将在3个工作日内审核，如果审核通过将为您绑定域名。
+我们会在 3 个工作日内完成审核，如果审核通过将为你绑定域名。请在绑定操作完成后配置 DNS：
+
+* 将要绑定域名的 CNAME 或者 A 记录指向 avosapps.com（国内）或 avosapps.us（美国）
 
 #### 域名备案流程
 
@@ -625,22 +627,24 @@ Web Hosting的动态请求超时也被限定为15秒。
 2. 我们的备案接入商给您邮寄幕布，进行拍照验证，并将其它资料签字盖章后一起邮寄给备案提供商
 3. 提交备案到（公司所在地）管局（通信管理局）审核
 
-请注意：**国内各地管局对备案的政策有差别，具体请查询当地管局**
+**请注意：国内各地管局对备案的政策有差别，如北京地区对域名后缀有限制，陕西地区需要提交组织机构代码证，山东地区要求服务器必须托管在山东省内（所以我们无法为山东地区用户备案）等。具体请查询当地管局。**
 
 #####第一步：
 
 请提交以下资料，我们来帮您录入到系统：
 
 1. 单位名称、单位通信地址、营业执照号码、营业执照副本扫描件
-2. 企业法人姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、电话（归属地为公司所在地）、QQ号码
-3. 如果网站负责人和法人不为同一人话，还需要提供网站负责人的姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、电话（归属地为公司所在地）、联系地址 （可以为单位通信地址）、QQ号码
-4. 网站名称（4个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个），还有网站服务内容类别，可在以下列表中选择一项
+2. 企业法人姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、QQ号码
+3. 如果网站负责人和法人不为同一人话，还需要提供网站负责人的姓名、身份证号码、身份证扫描件电子档（正反面需在一起）、邮箱、手机号、座机电话（归属地为公司所在地）、联系地址 （可以为单位通信地址）、QQ号码
+4. 网站名称（4个汉字及以上）、首页地址、域名（可多个）、域名证书（可多个），还有网站服务内容类别，可在以下列表中选择一项：
    * 综合门户
    * 搜索引擎
    * 单位门户网站
    * 网络游戏
    * 网络广告
 5. 绑定独立域名所需的信息，参考上节文档  
+
+如果企业之前已经备案过其他网站，即备案主体已经存在，此时还应向我们提供备案密码，我们才能完成资料录入工作。
 
 #####第二步：
 
@@ -653,9 +657,9 @@ Web Hosting的动态请求超时也被限定为15秒。
 4. 《网站备案信息真实性核验单》在最下面一栏，请网站负责人签字并盖公章。上面主办者名称和域名都需打印出来手写
 
 备案接入商地址：  
-> 地址：北京市东城区和平里东街15号航天物资大厦209房间  
+> 地　　址：北京市东城区和平里东街 15 号航天物资大厦 209 房间  
 > 备案专员：孟南  
-> 联系电话：010-84222290转8001；18101125625  
+> 联系电话：010-84222290 转 8001、18101125625  
   
 #####第三步：
 
