--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -55,7 +55,7 @@
                         <span class="user-name-text">{{user.username}}</span>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="/settings.html">帐号设置</a></li>
+                        <li><a href="/settings.html">账号设置</a></li>
                         <li><a href="/applist.html">控制台</a></li>
                         <li><a href="/settings.html#/setting/team">团队管理</a></li>
                         <li><a href="/bill.html#/bill/general">财务</a></li>
