--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -17,7 +17,7 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="checkbox custom-control">
-                                <label class="bspopover" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-html="true" data-title="详情" data-content="<p><strong>基础模块包含：</strong></p><ul><li>存储</li><li>统计</li><li>推送</li><li>用户反馈</li></ul>">
+                                <label class="bspopover" data-toggle="popover" data-placement="bottom" data-trigger="hover" data-html="true" data-title="详情" data-content="<p><strong>基础模块包含：</strong></p><ul><li>存储</li><li>统计</li><li>推送</li></ul>">
                                     <input type="checkbox" name="ios" disabled checked>
                                     <span class="control-indicator"></span> 基础模块
                                 </label>
@@ -52,7 +52,10 @@
                         <li>
                             <a href="https://github.com/leancloud/leancloud-demos#ios">Demo</a>
                         </li>
+
                     </ul>
+                    <div> <p>已开源模块：  <a href="https://github.com/leancloud/leancloud-feedback-ios">用户反馈</a>
+                            <a href="https://github.com/leancloud/leancloud-social-ios">社交</a></p>  </div>
                 </div>
                 <!-- .dl-cell -->
             </div>
