feat(download): update appearance

--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -54,8 +54,13 @@
             </li>
 
           </ul>
-          <div> <p>已开源模块：  <a href="https://github.com/leancloud/leancloud-feedback-ios">用户反馈</a>
-              <a href="https://github.com/leancloud/leancloud-social-ios">社交</a></p>  </div>
+
+          <hr>
+          <ul class="list-unstyled list-inline">
+            <li>已开源模块</li>
+            <li><a href="https://github.com/leancloud/leancloud-feedback-ios"><i class="icon icon-github"></i> 用户反馈组件</a></li>
+            <li><a href="https://github.com/leancloud/leancloud-social-ios"><i class="icon icon-github"></i> 社交组件</a></li>
+          </ul>
         </div>
         <!-- .dl-cell -->
       </div>
