fix(download): wrong markup [ci skip]

--- a/templates/pages/sdk_down.html
+++ b/templates/pages/sdk_down.html
@@ -58,8 +58,8 @@
           <hr>
           <ul class="list-unstyled list-inline">
             <li>已开源模块</li>
-            <li><a href="https://github.com/leancloud/leancloud-feedback-ios"><i class="icon icon-github"></i> 用户反馈组件</a></li>
-            <li><a href="https://github.com/leancloud/leancloud-social-ios"><i class="icon icon-github"></i> 社交组件</a></li>
+            <li><a href="https://github.com/leancloud/leancloud-feedback-ios" class="btn"><i class="icon icon-github"></i> 用户反馈组件</a></li>
+            <li><a href="https://github.com/leancloud/leancloud-social-ios" class="btn"><i class="icon icon-github"></i> 社交组件</a></li>
           </ul>
         </div>
         <!-- .dl-cell -->
