change doc name: eventstream->socialInApp, fixed #334

--- a/templates/include/header.html
+++ b/templates/include/header.html
@@ -183,7 +183,7 @@
         <li class="dropdown">
           <a class="dropdown-toggle" role="button" data-toggle="dropdown" data-hover="dropdown" href="#">更多</a>
           <ul class="dropdown-menu">
-            <li><a href="status_system.html">事件流系统使用指南</a></li>
+            <li><a href="status_system.html">应用内社交使用指南</a></li>
             <li><a href="app_search_guide.html">应用内搜索和 DeepLink 开发指南</a></li>
             <li><a href="app_data_share.html">应用之间数据共享（Class 绑定）</a></li>
             <li><a href="user_groups.html">用户群分析指南</a></li>
