update realtime link to new version .

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -81,7 +81,7 @@
           <li><a href="ios_os_x_guide.html">数据存储开发指南</a></li>
           <li><a href="ios_push_guide.html">消息推送开发指南</a></li>
           <li><a href="ios_push_cert.html">iOS 推送证书设置指南</a></li>
-          <li><a href="ios_realtime_v2.html">实时通信开发指南</a></li>
+          <li><a href="realtime_guide-ios.html">实时通信开发指南</a></li>
           <li><a href="relation_guide.html">关系建模指南</a></li>
           <li><a href="ios_statistics.html">统计分析开发指南</a></li>
           <li><a href="ios_os_x_sms_guide.html">短信验证使用指南</a></li>
@@ -99,7 +99,7 @@
         <ul>
           <li><a href="android_guide.html">数据存储开发指南</a></li>
           <li><a href="android_push_guide.html">消息推送开发指南</a></li>
-          <li><a href="android_realtime_v2.html">实时通信开发指南</a></li>
+          <li><a href="realtime_guide-android.html">实时通信开发指南</a></li>
           <li><a href="android_statistics.html">统计分析开发指南</a></li>
           <li><a href="android_sms_guide.html">短信验证使用指南</a></li>
           <li><a href="android_faq.html">FAQ</a></li>
@@ -137,7 +137,7 @@
           <li><a href="dotnet_guide.html">.NET 数据存储开发指南</a></li>
           <li><a href="unity_guide.html">Unity3D 数据存储开发指南</a></li>
           <li><a href="dotnet_push_guide.html">WP8.0 消息推送开发指南</a></li>
-          <li><a href="dotnet_realtime.html">.NET 实时通信开发指南</a></li>
+          <li><a href="realtime_guide-dotnet.html">.NET 实时通信开发指南</a></li>
           <li><a href="unity_statistics.html">Unity3D 统计开发指南</a></li>
           <li><a href="dotnet_faq.html">FAQ</a></li>
           <li><a href="api/dotnet/Help/index.html">.NET SDK API</a></li>
