update from comments.

--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -101,7 +101,7 @@
 ```
   {"*":{"read":true,"write":true}}
 ```
-在[基于用户的权限管理]的章节中，已经在代码里面演示了通过 ACL 来实现基于用户的权限管理，那么基于角色的权限管理也是依赖 ACL 来实现的，只是在介绍详细的操作之前需要介绍「角色」这个重要的概念。
+在[基于用户的权限管理](#基于用户的权限管理)的章节中，已经在代码里面演示了通过 ACL 来实现基于用户的权限管理，那么基于角色的权限管理也是依赖 ACL 来实现的，只是在介绍详细的操作之前需要介绍「角色」这个重要的概念。
 
 ### 角色的权限管理
 
@@ -117,6 +117,39 @@
 {% endblock %}
 
 执行完毕之后，在控制台可以查看 `_Role` 表里已经存在了一个 `Administrator` 的角色。
+另外需要开发者注意的是：可以直接通过 *控制台*-> *`Post` 表*-> *其他* -> *权限设置*  直接设置权限。并且我们要强调的是：
+
+> ACL 可以精确到 Class，也可以精确到具体的每一个对象（表中的记录）。
+
+#### 为对象设置角色的访问权限
+我们现在已经创建了一个有效的角色，接下来为 `Post` 对象设置 `Administrator` 的访问「可读可写」的权限，设置成功以后，任何具备 `Administrator` 角色的用户都可以对 `Post` 对象进行「可读可写」的操作了：
+
+{% block set_acl_for_role %}
+
+{% endblock %}
+
+#### 用户角色的赋予和剥夺
+经过以上两步，我们还差一个给具体的用户设置角色的操作，这样才可以完整地实现基于角色的权限管理。
+
+在通常情况下，角色和用户之间本是多对多的关系，比如需要把某一个用户提升为某一个版块的版主，亦或者某一个用户被剥夺了版主的权力，以此类推，在应用的版本迭代中，用户的角色都会存在增加或者减少的可能，因此，LeanCloud 也提供了为用户赋予或者剥夺角色的方式。
+注意：在代码级别，**为角色添加用户** 与 **为用户赋予角色** 实现的代码是一样的。
+此类操作的逻辑顺序是：
+
+* 赋予角色：首先判断该用户是否已经被赋予该角色，如果已经存在则无需添加，如果不存在则为该用户(AVUser)的 `roles` 属性添加当前角色实例。
+
+以下代码演示为当前用户添加 `Administrator`角色：
+
+{% block add_role_for_user %}
+{% endblock %}
+
+角色赋予成功之后，就已经完成了，基于角色的权限管理的功能才算完成。
+
+另外，此处不得不提及的就是角色的剥夺：
+
+* 剥夺角色： 首先判断该用户是否已经被赋予该角色，如果未曾赋予则不做修改，如果已被赋予，则从对应的用户（AVUser）的 `roles` 属性当中把该角色删除。 
+
+{% block remove_role_from_user %}
+{% endblock %}
 
 #### 角色的查询
 除了在控制台可以直接查看已有角色之外，通过代码也可以直接查询当前应用中已存在的角色。
@@ -144,24 +177,6 @@
 ```
 {% endblock %}
 
-#### 用户角色的赋予和剥夺
-在通常情况下，角色和用户之间本是多对多的关系，比如需要把某一个用户提升为某一个版块的版主，亦或者某一个用户被剥夺了版主的权力，以此类推，在应用的版本迭代中，用户的角色都会存在增加或者减少的可能，因此，LeanCloud 也提供了为用户赋予或者剥夺角色的方式。
-注意：在代码级别，**为角色添加用户** 与 **为用户赋予角色** 实现的代码是一样的。
-此类操作的逻辑顺序是：
-
-* 赋予角色：首先判断该用户是否已经被赋予该角色，如果已经存在则无需添加，如果不存在则为该用户(AVUser)的 `roles` 属性添加当前角色实例。
-
-以下代码演示为当前用户添加 `Moderator`角色：
-
-{% block add_role_for_user %}
-{% endblock %}
-
-* 剥夺角色： 首先判断该用户是否已经被赋予该角色，如果未曾赋予则不做修改，如果已被赋予，则从对应的用户（AVUser）的 `roles` 属性当中把该角色删除。 
-
-{% block remove_role_from_user %}
-{% endblock %}
-
-
 #### 角色的从属关系
 角色从属关系是为了实现不同角色的权限共享以及权限隔离。
 
@@ -178,3 +193,4 @@
 {% block share_role %}
 
 {% endblock %}
+
