--- a/views/acl_quick_start.tmpl
+++ b/views/acl_quick_start.tmpl
@@ -1,8 +1,6 @@
 # LeanCloud 权限管理快速指南-{% block language_version %}{% endblock %}
 
-首先，我们必须重点声明
-
-> 权限管理是否健全是判断一个应用是否可以正式发布的核心判断标准，任何一家应用开发厂商都不会希望自己的应用在上线发布之后依然存在安全漏洞。
+**一个应用的权限管理是否健全，是判断其能否正式发布的核心标准**，任何一家应用开发厂商都不会希望自己的应用在发布之后依然存在安全漏洞。
 
 让我们先来讨论下面这个问题：
 
