Add a new block about how to update ACL in console.

--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -119,7 +119,7 @@
 执行完毕之后，在控制台可以查看 `_Role` 表里已经存在了一个 `Administrator` 的角色。
 另外需要开发者注意的是：可以直接通过 *控制台*-> *`Post` 表*-> *其他* -> *权限设置*  直接设置权限。并且我们要强调的是：
 
-> ACL 可以精确到 Class，也可以精确到具体的每一个对象（表中的记录）。
+> ACL 可以精确到 Class，也可以精确到具体的每一个对象（表中的每一条记录）。
 
 #### 为对象设置角色的访问权限
 我们现在已经创建了一个有效的角色，接下来为 `Post` 对象设置 `Administrator` 的访问「可读可写」的权限，设置成功以后，任何具备 `Administrator` 角色的用户都可以对 `Post` 对象进行「可读可写」的操作了：
@@ -193,4 +193,45 @@
 {% block share_role %}
 
 {% endblock %}
+
+
+### 权限的分级
+在日常生活中，我们也遇到过权限分级的问题，例如新的系统又一次升级，引入了超级管理员的概念，这个超级管理员可以对系统里面任何的对象进行「读写操作」，按照前文的做法，需要用代码实现如下步骤：
+
+1. 创建超级管理员角色
+2. 遍历云端现有的帖子，为所有对象添加超级管理员的「ACL 读写权限」
+3. 保存数据
+
+开发者一旦面对这种逻辑重复的代码，一般都会想到：有没有一个快捷的操作可以一次性为某一个角色添加整个 Class 添加权限？
+当然，LeanCloud 也已经提供了便捷的可视化的操作。
+步骤如下：
+
+* 打开*控制台* -> *存储* -> *Post* -> *其他*-> *权限设置*
+* 出现下图所示
+
+![acl_in_console](http://ac-lhzo7z96.clouddn.com/1442281757400)
+* 在这里你可以设置某一个角色对 `Post` 的操作权限：选择`指定用户` -> 在指定角色中输入 `superAdmin`，并且点击添加即可。
+
+如此设置，无需书写代码，在项目迭代过程中有角色加入都可以用这种便捷的方式进行操作。
+
+
+权限设置的参数以及操作解释如下：
+
+参数名 | 含义
+--- | ---
+add_fields|添加新字段到class
+create | 保存一个从未创建过的新对象
+delete |  删除一个对象
+find | 发起一次对象列表查询
+get | 通过objectId获取对象
+update | 保存一个已经存在并且被修改的对象
+
+权限对象名 | 含义
+--- | ---
+所有用户 | 任意用户均有权限
+登录用户 | 用户登陆之后，具有权限
+指定用户| 可以指定具体的用户（`AVUser`）也可以指定具体的角色（`AVRole`）
+
+
+
 
