--- a/views/acl_guide.tmpl
+++ b/views/acl_guide.tmpl
@@ -1,4 +1,5 @@
-# LeanCloud 权限管理使用规范
+# LeanCloud 权限管理使用规范-{% block language_version %}{% endblock %}
+
 
 数据安全在应用开发的任何阶段都应该被重视。因此本文档我们详细介绍了在选择 LeanCloud 作为后端服务之后，如何使用 LeanCloud 提供的安全功能模块为开发者的应用以及数据提供安全保障。
 
@@ -231,6 +232,7 @@ update | 保存一个已经存在并且被修改的对象
 所有用户 | 任意用户均有权限
 登录用户 | 用户登陆之后，具有权限
 指定用户| 可以指定具体的用户（`AVUser`）也可以指定具体的角色（`AVRole`）
+
 
 
 
